# DD2323-Computer-Graphics

./: .gitignore  README.md
CgLab1/: CMakeLists.txt  skeleton.cpp  starfield.cpp
Lab-1/: CMakeLists.txt  SDL2Auxiliary.cpp
Lab-1-Interpolation/: CMakeLists.txt  SDL2Auxiliary.h  colors.cpp  starfield.cpp
Lab-2-Raytracing/: CMakeLists.txt  raytracing.cpp
Lab-3-Rasterization/: CMakeLists.txt  rasterization.cpp
